# email-sort

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  Makefile  README.md  conf.example.toml  pyproject.toml
.agents/skills/personal-email-insights/: SKILL.md
.agents/skills/server-benchmark-config/: SKILL.md
.github/workflows/: ci.yml  coverage.yml
scratch/: benchmark_no_think.py  check_count.py  debug_jmap.py  experiment_snippet_size.py  qwen_test.json  send_example_request.py  test_fasttext.py  test_llm_speed.py
src/email_sort/: __init__.py  benchmark.py  classify.py  cli.py  config.py  corrections.py  db.py  detect_language.py  email_parse.py  export.py  heuristics.py  ingest_fastmail.py  ingest_imap.py  ingest_mbox.py  log.py  migrate.py  migrate_labels.py  precheck.py  progress.py  sender_analysis.py  sieve_generator.py  unsubscribe_agent.py  verify_unsubscribe.py
src/email_sort/migrations/: 001_add_corrections_and_sender_overrides.sql  002_add_sender_stats.sql  004_add_unsubscribe_log.sql  005_add_deduplication_columns.sql
tests/: conftest.py  test_core.py
