[project]
name = "email-sort"
version = "0.1.0"
description = "Automated email sorting and classification using LLMs and heuristics"
readme = "README.md"
authors = [
    { name = "theontho", email = "22130+theontho@users.noreply.github.com" }
]
requires-python = ">=3.14"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "fasttext>=0.9.3",
    "fasttext-langdetect>=1.0.5",
    "imapclient>=3.1.0",
    "numpy<2.0",
    "openai>=2.32.0",
    "playwright>=1.59.0",
    "pydantic>=2.13.3",
    "python-dotenv>=1.2.2",
    "requests>=2.33.1",
    "rich>=13.9.4",
    "sievelib>=1.5.0",
]

[dependency-groups]
dev = [
    "mypy>=1.20.2",
    "pytest>=8.0.0",
    "ruff>=0.15.12",
    "types-requests>=2.33.0.20260408",
]

[project.scripts]
email-sort = "email_sort.cli:main"

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100

[tool.mypy]
python_version = "3.14"
ignore_missing_imports = true
check_untyped_defs = true
