[project]
name = "email-sort"
version = "0.1.0"
description = "Automated email sorting and classification using LLMs and heuristics"
readme = "README.md"
authors = [
    { name = "theontho", email = "22130+theontho@users.noreply.github.com" }
]
requires-python = ">=3.14"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "fasttext>=0.9.3",
    "fasttext-langdetect>=1.0.5",
    "numpy<3.0",
    "openai>=2.36.0",
    "playwright>=1.59.0",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "requests>=2.33.1",
    "rich>=13.9.4",
    "sievelib>=1.5.0",
]

[dependency-groups]
dev = [
    "mypy>=2.0.0",
    "pre-commit>=4.0.0",
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.15.12",
    "types-requests>=2.33.0.20260508",
]

[project.scripts]
email-sort = "email_sort.cli:main"

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP", "N", "S"]
ignore = [
    "E501", # line too long (handled by formatter)
    "S608", # SQL strings use internal constant table names, not user input
    "S110", # some best-effort parsing/browser cleanup intentionally ignores failures
    "S112", # malformed MIME parts are skipped during ingestion
    "S310", # language model download uses a fixed HTTPS URL
    "S311", # retry jitter is not security-sensitive randomness
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.14"
ignore_missing_imports = true
check_untyped_defs = true

[tool.pytest.ini_options]
pythonpath = ["src", "."]
testpaths = ["tests"]
